[gd_scene load_steps=5 format=2]

[ext_resource path="res://world/NavigationPolygonInstance_gen.gd" type="Script" id=1]

[sub_resource type="NavigationPolygon" id=1]
vertices = PoolVector2Array( 32, 0, 32, 32, 0, 32, 0, 0 )
polygons = [ PoolIntArray( 0, 1, 2, 3 ) ]
outlines = [ PoolVector2Array( 0, 0, 0, 32, 32, 32, 32, 0 ) ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 15, 15 )

[sub_resource type="RectangleShape2D" id=3]

[node name="NavigationPolygonInstance" type="NavigationPolygonInstance"]
navpoly = SubResource( 1 )
script = ExtResource( 1 )

[node name="navarea" type="Area2D" parent="." groups=[
"gen",
"nav",
"navarea",
]]
__meta__ = {
"_edit_lock_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="navarea"]
position = Vector2( 16, 16 )
shape = SubResource( 2 )

[node name="Timer" type="Timer" parent="."]
wait_time = 4.0
one_shot = true

[node name="area1" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="area1"]
position = Vector2( -16, 16 )
shape = SubResource( 3 )

[node name="area2" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="area2"]
position = Vector2( 16, 48 )
shape = SubResource( 3 )

[node name="area3" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="area3"]
position = Vector2( 48, 16 )
shape = SubResource( 3 )

[node name="area4" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="area4"]
position = Vector2( 16, -16 )
shape = SubResource( 3 )

[node name="Timer2" type="Timer" parent="."]
wait_time = 0.25
one_shot = true
autostart = true
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="area_entered" from="area1" to="." method="_on_area1_area_entered"]
[connection signal="area_entered" from="area2" to="." method="_on_area2_area_entered"]
[connection signal="area_entered" from="area3" to="." method="_on_area3_area_entered"]
[connection signal="area_entered" from="area4" to="." method="_on_area4_area_entered"]
[connection signal="timeout" from="Timer2" to="." method="_on_Timer2_timeout"]
